# regideseaux3m-hass

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  hacs.json  pyproject.toml
.github/workflows/: hacs_validation.yml  test_and_release.yml
custom_components/regiedeseauxmpl/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  exceptions.py  info.md  manifest.json  sensor.py  services.yaml  strings.json
custom_components/regiedeseauxmpl/translations/: en.json  fr.json
scripts/: build_hacs_zip.py  debug_workflow.sh  setup_dev_env.py  verify_hacs_compliance.py
tests/: conftest.py  test_api_auth.py  test_api_reauth.py  test_coordinator.py  test_meter_index.py  test_sensor.py
